Progress bar overlapping and cutting from the button was fixed

--- a/TeleHealth_files/responsive.css
+++ b/TeleHealth_files/responsive.css
@@ -229,7 +229,7 @@
     /*background-color: yellow;*/
     -webkit-appearance: none;
     -moz-appearance: none;
-    text-indent: 15px;
+    text-indent: 10px;
     text-overflow: '';
     text-shadow: 0 0 0 #000;
     width: 75px;
@@ -247,6 +247,7 @@
     height: 12px;
     background-size: contain;
     margin-top: 8px; 
+   
   }
   .icon.icon-chevronDown {
     background-image: url(dropdownDisabled.svg);
@@ -259,6 +260,7 @@
     position: relative;
     display: inline-block;
   }
+
   div.dropdown:hover .icon.icon-chevronDown { 
     background-image: url(dropdown.svg); 
   }
@@ -505,7 +507,7 @@
 
 /* /////////////// Small Browser Resolution /////////////////// */
 
-@media screen and (max-width: 600px) and (min-width: 501px) {
+@media screen and (max-width: 768px) and (min-width: 499px) {
     html, body, form {
     width: 100%;
     height: 100%;
@@ -688,7 +690,6 @@
   }
 /*^^^^^^^  Hover effect buttons ^^^^^*/
   
-
     .calIcon {
         padding: 1px;
         align-content: center;
@@ -715,7 +716,7 @@
     }
     .progBar {
         width:100%;
-        height: 70px;
+        height: 90px;
         padding: 0px 10px 3px 10px;
     }
   
@@ -1217,7 +1218,7 @@
     }
     .progBar {
         width:100%;
-        height: 70px;
+        height:80px;
         padding: 0px 10px 3px 10px;
     }
   
@@ -1707,7 +1708,7 @@
     }
     .progBar {
         float: right;
-        width:50%;
+        width:60%;
         height: 70px;
         padding: 0px 10px 3px 10px;
         
